# SoundArch

./: .gitignore  PHASE_2_FINAL_COMPLETION.md  PHASE_3_CODE_ANALYSIS.md  PHASE_3_DEVICE_TESTING_RESULTS.md  PHASE_3_KICKOFF.md  PHASE_3_PERFORMANCE_PLAN.md  PHASE_3_PHASE_B_COMPLETION.md  PHASE_3_SUMMARY.md  PHASE_3_TEST_OPTIMIZATION_PLAN.md  PHASE_3_TEST_OPTIMIZATION_RESULTS.md  PROJECT_STATUS.md  README.md  TECHNICAL_DOCUMENTATION.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: BRANCH_PROTECTION_RULES.md
.github/workflows/: android-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/audio/: NativeAudioEngine.cpp  NativeAudioEngine.h  OboeEngine.cpp  OboeEngine.h
app/src/main/cpp/dsp/: AGC.cpp  AGC.h  Compressor.cpp  Compressor.h  DSPMath.cpp  DSPMath.h  Equalizer.cpp  Equalizer.h  Limiter.cpp  Limiter.h
app/src/main/cpp/utils/: RingBuffer.cpp  RingBuffer.h
app/src/main/res/layout/: activity_main.xml
docs/: README.md
docs/architecture/: DESIGN_SYSTEM.md  DSP_WIRING_MATRIX.md  NAVGRAPH_MAP.md
docs/completion-reports/: FINAL_TEST_COMPLETION_REPORT.md  M4_COMPLETE_DEEP_INSPECTION_FINAL.md  M4_FINAL_COMPLETION_REPORT.md  M4_FINAL_DEEP_INSPECTION_UPDATED.md  M4_FINAL_VERIFICATION_GRID.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md
docs/testing/: DSP_TEST_SUITE.md  TEST_INFRASTRUCTURE_COMPLETE_REPORT.md  TEST_INFRASTRUCTURE_REPORT.md  UI_TEST_SUITE.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+55 files in other folders)
